--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "prettier", "import"],
+  "plugins": ["react", "prettier", "import", "react-hooks"],
   "rules": {
     "import/no-unresolved": [2, { "caseSensitive": false }],
     "import/order": [
@@ -30,7 +30,7 @@
         "newlines-between": "always"
       }
     ],
-    "indent": ["error", 2],
+    "indent": "off",
     "linebreak-style": [0, "windows"],
     "prettier/prettier": "error",
     "quotes": ["error", "single"],
@@ -40,6 +40,9 @@
     "semi": ["error", "never"]
   },
   "settings": {
+    "react": {
+      "version": "detect"
+    },
     "import/resolver": {
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"],
