--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,3 @@
-
 {
   "trailingComma": "none",
   "tabWidth": 2,
@@ -7,7 +6,7 @@
   "quoteProps": "preserve",
   "arrowParens": "always",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
+  "jsxBracketSameLine": true,
   "proseWrap": "never",
   "htmlWhitespaceSensitivity": "strict",
   "endOfLine": "crlf"
