--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,4 @@
+
 {
   "trailingComma": "none",
   "tabWidth": 2,
@@ -6,9 +7,8 @@
   "quoteProps": "preserve",
   "arrowParens": "always",
   "bracketSpacing": true,
-  "jsxBracketSameLine": true,
+  "jsxBracketSameLine": false,
   "proseWrap": "never",
   "htmlWhitespaceSensitivity": "strict",
-  "endOfLine": "auto",
-  "printWidth": 160
+  "endOfLine": "crlf"
 }
