--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,3 @@
-
 {
   "trailingComma": "none",
   "tabWidth": 2,
@@ -10,5 +9,5 @@
   "jsxBracketSameLine": false,
   "proseWrap": "never",
   "htmlWhitespaceSensitivity": "strict",
-  "endOfLine": "crlf"
+  "endOfLine": "auto"
 }
